--- a/PcCOnfig/View/ViewSavedConfigurations/ConfigPcSavedConfigurations.xaml
+++ b/PcCOnfig/View/ViewSavedConfigurations/ConfigPcSavedConfigurations.xaml
@@ -20,56 +20,59 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="Table" ItemsSource="{Binding Path=Configuration}" SelectedItem="{Binding Selected}" Style="{StaticResource DataGridStyle}" Grid.Row="0" Grid.Column="0" Margin="0">
+        <DataGrid ItemsSource="{Binding Path=Configuration}" SelectedItem="{Binding Selected}" Style="{StaticResource DataGridStyle}" Grid.Row="0" Grid.Column="0" Margin="0">
             <DataGrid.Columns >
                 <DataGridTextColumn Header="Name" Binding="{Binding ConfigurationName}" />
                 <DataGridTextColumn Header="Info" Binding="{Binding Info}"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Image Source="/Resources/icon.png" Grid.Row="0" Grid.Column="1" Width="Auto" MinWidth="400" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0" Opacity="0.1"></Image>
+        <Grid Grid.Row="0" Grid.Column="1" Width="Auto" MinWidth="400" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="40">
 
-        <Grid Grid.Row="0" Grid.Column="1" Width="500" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
-                <RowDefinition Height="1*" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
+                <RowDefinition Height="Auto" MinHeight="25"/>
 
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center">Name</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold">Name</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding NameText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center">Motherboard</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >Motherboard</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding MotherboardText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center">Cpu</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >Cpu</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding CpuText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center">Ram</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >Ram</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding RamText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center">Hdd</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >Hdd</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding HddText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center">PowerSupply</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >PowerSupply</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding PowerSupplyText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center">GraphicCard</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >GraphicCard</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding GraphicCardText}"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center">Box</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="DemiBold" >Box</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding BoxText}"></TextBlock>
+            
+            
 
         </Grid>
+
         <Button Content="{Binding SelectedText}" Command="{Binding Print}" Grid.Row="1" Grid.Column="1" ></Button>
         <Button Content="Delete selected" Command="{Binding Delete}" Grid.Row="1" Grid.Column="0"></Button>
     </Grid>
