Fixed errors : add cpu to db - architecture set; add graphic card to configuration - deselect graphic card;   \n  Added items to database   \n  Added window tittle to SavedConfigurationsWindow

--- a/PcCOnfig/View/ViewSavedConfigurations/ConfigPcSavedConfigurations.xaml
+++ b/PcCOnfig/View/ViewSavedConfigurations/ConfigPcSavedConfigurations.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="700"
              Icon="/Resources/icon.png"
+             Title="Saved Computer Configurations"
              WindowStartupLocation="CenterScreen">
     <Window.Background>
         <ImageBrush ImageSource="/Resources/background.png" />
